<resources>
    <string name="app_name">KNU Community</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="base_text_professor_name">이름 : %1$s</string>
    <string name="base_text_professor_phone">전화번호 : %1$s</string>
    <string name="base_text_professor_major">전공 : %1$s</string>
    <string name="base_text_professor_email">이메일 : %1$s</string>
    <string name="register_text">등록</string>
    <string name="account_register_text">계정 등록</string>
    <string name="register_description">※ 프로필 이미지, 닉네임을 등록해주세요.\n   (나중에 사용자 정보 창에서 변경 가능)</string>
    <string name="warning_input_login_form">아이디 또는 비밀번호를 입력해주세요</string>
    <string name="input_password_hint">비밀번호를 입력해 주세요</string>
    <string name="error_login">로그인에 실패하였습니다</string>
    <string name="error_password">비밀번호가 다릅니다</string>
    <string name="register_fail">회원가입에 실패하였습니다</string>
    <string name="register_success">회원가입에 성공하였습니다</string>
    <string name="register_already_exist">이미 존재하는 계정입니다.</string>
    <string name="error_empty_studentnumber_info">로그인 정보가 존재하지 않습니다\n다시 로그인 해주세요</string>
    <string name="base_text_register_nickname">닉네임 : %1$s</string>
    <string name="text_nickname">닉네임</string>
    <string name="base_text_register_name">이름 : %1$s</string>
    <string name="base_text_register_studentnumber">학번 : %1$s</string>
    <string name="warning_input_studentnumber">학번을 입력해 주세요</string>
    <string name="warning_input_password">비밀번호 정보가 없습니다</string>
    <string name="warning_input_nickname">닉네임을 입력해 주세요</string>
    <string name="warning_input_name">이름을 입력해 주세요</string>
    <string name="warning_input_profileimage">프로필 이미지를 선택해주세요</string>
    <string name="warning_no_homepage">홈페이지 정보가 없습니다</string>
    <string name="delivery_koreanfood">한식</string>
    <string name="delivery_chinesefood">중식</string>
    <string name="delivery_japanesefood">일식</string>
    <string name="delivery_food">양식</string>
    <string name="delivery_fastfood">패스트푸드</string>
    <string name="delivery_etceterafood">기타</string>
    <string name="community_freeboard_title">자유게시판</string>
    <string name="community_faq_title">질문과 답변</string>
    <string name="comminity_faq_question_title">Q. %1$s</string>
    <string name="community_faq_reply_txt">답변 %1$s</string>
    <string name="community_faq_reply_who_txt">%1$s</string>
    <string name="community_board_reply_count_form">%1$s</string>
    <string name="community_greenlight_title">그린라이트</string>
    <string name="community_board_nodata">정보를 가져오는 중에 문제가 발생하였습니다.</string>
    <string name="community_meeting_title">미팅</string>
    <string name="community_reply_text">댓글달기</string>
    <string name="community_reply_need_text">입력해주세요</string>
    <string name="community_gender_dialog_title">성별을 선택하여주세요</string>
    <string name="gender_male">남자</string>
    <string name="gender_female">여자</string>
    <string name="community_meeting_male_count">남자 %1$s명</string>
    <string name="community_meeting_female_count">여자 %1$s명</string>
    <string name="community_meeting_people_count">%1$s명</string>
    <string name="sharetaxi_time_format">%1$s월 %2$s년</string>
    <string name="OK">확인</string>
    <string name="NO">아니오</string>
    <string name="share">공유</string>
    <string name="show_more">더보기</string>
    <string name="warning_title">경고</string>
    <string name="notify_title">알림</string>
    <string name="want_you_delete">정말로 글을 삭제하시겠습니까?</string>
    <string name="want_you_board_edit">글을 수정하시겠습니까?</string>
    <string name="want_you_delete_comment">정말로 삭제하시겠습니까?</string>
    <string name="success_delete_board">성공적으로 글을 삭제하였습니다</string>
    <string name="community_market_title">장터</string>
    <string name="taxi_share_phone_input"># 택시합승 기능을 위해 필요한 핸드폰 번호를 등록해주세요.</string>
    <string name="phone_input_title">번호 등록</string>
    <string name="phone_input_hint">번호 입력 (예: 01012345678)</string>
    <string name="warning_phone_input">핸드폰 번호를 입력해주세요</string>
    <string name="error_to_work">문제가 발생하였습니다</string>
    <string name="success_phone_input">핸드폰 번호 등록에 성공하였습니다</string>
    <string name="success_board_write">글 작성이 완료되었습니다</string>
    <string name="error_board_write">글 작성이 실패하였습니다</string>
    <string name="success_board_comment_delete">성공적으로 삭제되었습니다</string>
    <string name="taxi_share_title">택시합승</string>
    <string name="taxi_share_isLeave">택시가 출발했습니다</string>
    <string name="taxi_share_want_leave">택시 출발</string>
    <string name="taxi_share_leave">출발</string>
    <string name="success_taxi_share_set_leave">택시가 출발합니다</string>
    <string name="success_taxi_share_set_with">택시를 함께 탑니다</string>
    <string name="success_taxi_share_set_unwith">택시 합승이 취소되었습니다</string>
    <string name="taxi_share_people_count">인원 : %1$s명</string>
    <string name="taxi_share_delay_leave">출발 대기중</string>
    <string name="taxi_share_write_departure_time">출발시간 : </string>
    <string name="taxi_share_write_departure_location">출발장소 : </string>
    <string name="taxi_share_write_destination_location">도착장소 : </string>
    <string name="taxi_share_write_share_people_count">현재 인원수 : </string>
    <string name="taxi_share_write_departure_location_ex">(ex : 강남대 입구)</string>
    <string name="taxi_share_write_destination_location_ex">(ex : 이공관)</string>
    <string name="taxi_share_write_info_text">출발 예정시간, 출발장소, 도착장소, 현재 인원 수가 모두 맞는지 다시 한번 확인해주세요.</string>
    <string name="taxi_share_write_info_text1">택시를 타고 출발하실 때 꼭 출발 버튼을 눌러주세요.</string>
    <string name="warning_taxi_share_write_time">출발시간을 입력해 주세요</string>
    <string name="warning_taxi_share_write_departure">출발장소를 입력해 주세요</string>
    <string name="warning_taxi_share_write_destination">도착장소를 입력해 주세요</string>
    <string name="warning_taxi_share_write_peoplecount">현재 인원 수를 입력해 주세요</string>
    <string name="warning_taxi_share_write_invalidpeoplecount">현재 인원 수는 1명 이상, 3명 이하이어야 합니다</string>
    <string name="error_notexist_board_content">존재하지 않는 글 입니다</string>
    <string name="warning_taxi_share_write_content">내용을 입력해주세요</string>
    <string name="warning_board_write_title">제목을 입력해 주세요</string>
    <string name="warning_board_write_content">내용을 입력해 주세요</string>
    <string name="warning_account_delete_message">정말로 계정을 삭제하시겠습니까?\n계정을 삭제하시면 모든 정보와 글이 사라집니다.</string>
    <string name="success_delete_account">성공적으로 계정을 삭제하였습니다</string>
    <string name="taxi_share_set_with_cancel">합승 취소</string>
    <string name="warning_meeting_set_gender">성별을 선택해주세요</string>
    <string name="warning_meeting_set_peoplecount">인원수를 적어주세요</string>
    <string name="warning_meeting_set_schoolname">학교이름을 적어주세요</string>
    <string name="warning_meeting_set_majorname">학과를 적어주세요</string>
    <string name="error_check_network_state">인터넷 연결 상태를 확인해 주세요</string>
    <string name="nickname_change_text">새로운 닉네임을 입력해주세요</string>
    <string name="nickname_change_title">닉네임 변경</string>
    <string name="profileimage_change_text">정말로 프로필사진을 변경 하시겠습니까?</string>
    <string name="success_nickname_change">닉네임이 변경되었습니다</string>
    <string name="text_studentinfo_notify_title">내 소식</string>
    <string name="text_studentinfo_notify_mynotify">내 알림</string>
    <string name="text_studentinfo_notify_myboard">내가 쓴 글</string>
    <string name="text_studentinfo_notify_noti_reply_base">%1$s님이 회원님의 %2$s "'"%3$s"'" 글에 댓글을 다셨습니다.</string>
    <string name="text_studentinfo_notify_noti_reply_empty_titlebase">%1$s님이 회원님의 %2$s 글에 댓글을 다셨습니다.</string>
    <string name="text_studentinfo_notify_board_base">%1$s "'"%2$s"'"</string>
    <string name="text_studentinfo_go_setting">설정으로 이동</string>
    <string name="text_setting_title">설정</string>
    <string name="text_setting_getting_data">정보를 가져오는 중입니다</string>
    <string name="text_setting_phonenumber_dialog_message">핸드폰 번호를 입력하세요</string>
    <string name="text_are_you_want_logout_message">정말로 로그아웃 하시겠습니까?</string>
    <string name="text_setting_author_devices">인증된 기기</string>
    <string name="text_setting_author_device_logout">정말로 해당 기기를 로그아웃 시키겠습니까?</string>
    <string name="text_setting_author_devices_message">자신의 기기가 아니면 꼭 로그아웃 시켜주세요.</string>
    <string name="text_beat">총 학생회</string>
    <string name="text_beat_culture">문화</string>
    <string name="text_beat_welfare">복지</string>
    <string name="text_beat_review">후기</string>
    <string name="text_beat_qna">Q<![CDATA[&]]>A</string>
    <string name="text_beat_looknlook">Look<![CDATA[&]]>look</string>
    <string name="text_beat_etc">기타</string>
    <string name="text_beat_looknlook_time_format">yyyy년 M월</string>
    <string name="text_developer_info">개발자 정보</string>
    <string name="developer_special_thanks">Special Thanks to..\n김성민, 김용범, 서홍일, 임소담이</string>
    <string name="text_meeting_success_notyet">미팅, 성공적</string>
    <string name="text_meeting_success">만남이 이루어졌습니다.</string>
    <string name="text_are_you_sure_meeting_success">정말로 미팅 약속이 잡히셨습니까?</string>
    <string name="success_update_meeting">미팅 정보를 성공적으로 업데이트 하였습니다</string>
    <string name="profile_name_beat">학생회(BEAT)</string>
    <string name="text_greenlight_change">정말로 그린라이트를 수정하시겠습니까?</string>
    <string name="error_notexist_map_app">지도를 열 수 있는 사용자 어플리케이션이 존재하지 않습니다</string>
    <string name="setting_feedback_subject">강남대학교 커뮤니티 피드백</string>
    <string name="text_select_delivery_category">음식 카테고리를 선택해주세요</string>
    <string name="double_back_kill_app">뒤로가기를 한번 더 눌러 종료해주세요</string>
    <string name="receive_new_board_comment">회원님의 글에 새로운 댓글이 달렸습니다.</string>
    <string name="error_to_get_majorname">학과 정보를 가져오는 중에 문제가 발생하였습니다.</string>
    <string name="text_library_total_seat_format">전체 좌석수 : %1$s</string>
    <string name="text_library_used_seat_format">사용 좌석수 : %1$s</string>
    <string name="text_library_empty_seat_format">잔여 좌석수 : %1$s</string>
    <string name="warning_board_write_title_lenght">제목은 25자를 넘을 수 없습니다</string>
    <string name="warning_input_nickname_lenght">닉네임은 10자를 넘을 수 없습니다</string>
    <string name="text_select_photo_profile_title">사진 선택</string>
    <string name="text_photo_profile_album">사진 앨범</string>
    <string name="text_photo_profile_delete">삭제</string>
    <string name="success_delete_profileimage">성공적으로 프로필 이미지를 삭제하였습니다</string>
    <string name="text_taxi_no_phonenumber_data">정보가 존재하지 않습니다.</string>
    <string name="reply_no_data">댓글이 없습니다.\n첫번째 댓글을 달아주세요.</string>
    <string name="market_cloth">의류</string>
    <string name="market_fashion">패션잡화</string>
    <string name="market_beauty">미용</string>
    <string name="market_computer">컴퓨터</string>
    <string name="market_mobile">모바일</string>
    <string name="market_camera">카메라</string>
    <string name="market_music">음악</string>
    <string name="market_game">게임</string>
    <string name="market_book">도서</string>
    <string name="market_share">무료나눔</string>
    <string name="market_etc">기타</string>
    <string name="select_board_category">카테고리를 선택해주세요</string>
    <string name="warning_board_write_select_category">카테고리를 선택해주세요</string>
    <string name="share_taxi_sure_you_want_leave">정말로 택시를 타고 출발합니까?</string>
    <string name="share_taxi_sure_you_want_unwith">정말로 택시합승을 취소하시겠습니까?</string>
    <string name="share_taxi_sure_you_want_with">택시합승을 하시겠습니까?</string>
    <string name="text_ban_nickname">사용할 수 없는 닉네임입니다</string>
    <string name="text_studentinfo_notify_mycomment">내가 쓴 댓글</string>
    <string name="text_helper_1">- 다른 메뉴로 쉽게 바로 이동하시려면 왼쪽에서 오른쪽 방향으로 밀거나 좌측 상단에 세개의 가로선으로 된 버튼을 누르세요.\n\n
                                 - 새로고침을 하시려면 게시글 리스트 화면에서 위에서 아래로 당기면 새로고침이 됩니다.</string>
    <string name="text_helper_2">- 장터게시판은 안전거래를 위하여 실명제를 사용합니다.\n\n
                                 - 장터 메인의 리스트 화면에서 오른쪽 하단의 버튼을 누르면 카테고리로 분류하여 보실 수 있습니다.</string>
    <string name="text_helper_3">- 자유게시판과 질문과 답변은 닉네임으로 운영되며, 그린라이트는 익명으로 운영되니 마음껏 글을 많이 작성해주세요.</string>
    <string name="text_helper_4">- 미팅 메인의 게시글 좌측 색상은 파랑색은 남자, 핑크색은 여자, 초록색은 미팅성공을 의미합니다.\n\n
                                 - 미팅 주선자(미팅게시판에 글을 적으신 분)께서는 미팅이 주선되면 본인의 글로 들어가서 미팅 성공버튼을 눌러주세요.</string>
</resources>