<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/phoneinput_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/phone_input_title"
            android:textColor="@android:color/white"
            android:textSize="23sp" />
    </android.support.v7.widget.Toolbar>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/taxi_share_phone_input"
        android:textColor="@android:color/white"
        android:textSize="17sp"
        android:paddingLeft="16dp"
        android:paddingTop="18dp"
        android:paddingRight="16dp"
        android:paddingBottom="12dp" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:layout_margin="20dp"
        android:background="#26ffffff"
        android:hint="@string/phone_input_hint"
        android:inputType="numberSigned"
        android:padding="10dp"
        android:textColor="@android:color/white"
        android:textColorHint="#FFB3B3B3"
        android:textSize="17sp" />

    <RelativeLayout
        android:id="@+id/phoneinput_cornfirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/bg_button_phoneinfo"
        android:gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:gravity="center">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/ic_ok" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:gravity="center"
                android:text="@string/register_text"
                android:textColor="@android:color/white"
                android:textSize="18sp" />
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>